# docs/swagger.yaml
@@ -298,10 +298,6 @@ paths:
           description: PR not found
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
-        "409":
-          description: PR already merged
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
